--- a/Q3.Rmd
+++ b/Q3.Rmd
@@ -198,7 +198,7 @@ Using the Kernel estimators, I looked at the density of the number of incindents
 library(pointdensityP)
 library(ggmap)
 
-register_google(key = "AIzaSyAtN-yFKd2hMFh1Td-lIumwj_57I5ZcQXg")
+register_google(key = "")
 has_google_key()
 
 density_shot = NULL
